fixed issue with mobile margin and padding spacing for content

--- a/app/scss/_card.scss
+++ b/app/scss/_card.scss
@@ -1,6 +1,6 @@
 .card {
     background-color: #fff;
-    width: 90%;
+    width: 87%;
     max-width: 450px;
     border-radius: 20px;
     overflow: hidden;
@@ -8,14 +8,23 @@
     &__image {
         max-height: 220px;
     }
+
     &__content {
         align-items: center;
         padding: 2em 1.5em;
+
+        @include breakpoints-up(med) {
+            padding: 2.8125em 3em;
+        }
     }
 
-    &__content > h1 ~ :not(:last-child) {
-        margin-bottom: 24px;
-    }
+    // &__content > h1 ~ :not(:last-child) {
+    //     margin-bottom: 1.5em;
+
+    //     @include breakpoints-up(med) {
+    //         margin-bottom: 2em;
+    //     }
+    // }
 
     &__title {
         margin: 0;
@@ -28,18 +37,28 @@
         font-weight: 500;
         text-align: center;
         line-height: 1.6;
-        padding: 0 1em;
+        padding: 0 0.5em;
+        // border: 1px solid #000;
+        margin-bottom: 2em;
+
+        @include breakpoints-up(med) {
+            margin-bottom: 1.25em;
+        }
     }
 
     &__btn {
         display: block;
         text-align: center;
-        margin-bottom: 24px;
+        margin-bottom: 1.5em;
         color: white;
         background-color: $btnBlue;
         border-radius: 11px;
         box-shadow: 0px 20px 20px rgba(56, 42, 225, 0.190291);
         transition: background-color 200ms ease-in-out;
+
+        @include breakpoints-up(med) {
+            // padding: 1em 6.375em;
+        }
     }
 
     &__btn:hover,
